# neo_bank

./: .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: dbt-ci.yml
airflow/: .gitignore  docker-compose.yml
airflow/dags/: gcs_to_bq_dag.py
airflow/scripts/: init_airflow_users.sh
app/: app.py
data_exploration/: exploration.ipynb  pyproject.toml
dbt/: .gitignore  pyproject.toml
dbt/dbt_emma/: .gitignore  dbt_project.yml  pyproject.toml
dbt/dbt_emma/models/source/: sources.yml
dbt/dbt_emma/models/staging/: stg_devices.sql  stg_notifications.sql  stg_transactions.sql  stg_users.sql
dbt/dbt_neobank/: .envrc  .sqlfluff  dbt_project.yml  pyproject.toml
dbt/dbt_neobank/.github/workflows/: dbt-ci.yml
dbt/dbt_neobank/docs/: docs.md
dbt/dbt_neobank/erd/: vault_neobank.sql
dbt/dbt_neobank/macros/: generate_schema_name.sql  load_date.sql  load_end_date.sql  notification_satellite_template.sql  record_source.sql  transaction_satellite_template.sql  user_satellite_template.sql
dbt/dbt_neobank/models/data_vault/: hub_notifications.sql  hub_transactions.sql
dbt/dbt_neobank/models/data_vault/hubs/: data_vault_hubs.yml  hub_notifications.sql  hub_transactions.sql  hub_users.sql
dbt/dbt_neobank/models/data_vault/links/: data_vault_links.yml  link_user_notification.sql  link_user_transaction.sql
dbt/dbt_neobank/models/data_vault/satellites/: data_vault_satellites.yml  sat_notif_channel.sql  sat_notif_creation.sql  sat_notif_reason.sql  sat_notif_status.sql  sat_trans_amount_usd.sql  sat_trans_cardholder.sql  sat_trans_country.sql  sat_trans_creation.sql  sat_trans_currency.sql  sat_trans_direction.sql  sat_trans_state.sql  sat_trans_type.sql  sat_user_contacts.sql  sat_user_country.sql  sat_user_creation.sql  sat_user_crypto.sql  sat_user_device.sql  sat_user_dob.sql  sat_user_mktg_email.sql  sat_user_mktg_push.sql  sat_user_plan.sql
dbt/dbt_neobank/models/mart/: mart_transactions.sql  mart_user_notifications.sql  mart_user_settings.sql  marts.yml
dbt/dbt_neobank/models/marts/: marts.yml
dbt/dbt_neobank/models/source/: sources.yml
dbt/dbt_neobank/models/staging/: staging.yml  stg_devices.sql  stg_notifications.sql  stg_transactions.sql  stg_users.sql
part_1-data_exploration/: exploration.ipynb  pyproject.toml
part_1-data_exploration/gx/: great_expectations.yml
part_1-data_exploration/gx/expectations/: .ge_store_backend_id
scripts/: load_users_to_bq.py
streamlit/: Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
streamlit/pages/: 1_user_settings.py  2_user_notifications.py  3_user_transactions.py
