[project]
name = "neo-bank"
version = "0.1.0"
description = ""
authors = [
  { name = "neobak-team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas (>=2.3.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
