[project]
name = "dbt_neobank"
version = "0.1.0"
description = ""
authors = [
    {name = "Emma Berniczky",email = "e.berniczky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery (>=1.10.0,<2.0.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)",
    "dbt-core (>=1.10.5,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.4.2"
sqlfluff-templater-dbt = "^3.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
