[project]
name = "vizualizations"
version = "0.1.0"
description = ""
authors = [
    {name = "Emma Berniczky",email = "e.berniczky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "google-cloud-bigquery (>=3.35.1,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
